--- a/wp-content/themes/wp-starter/template-parts/page-events.twig
+++ b/wp-content/themes/wp-starter/template-parts/page-events.twig
@@ -34,10 +34,12 @@
 			{% else %}
 				<p>No posts found.</p>
 			{% endif %} #}
-
-			<div id="calendar" class=""></div>
-			<div id="event-details"></div>
+			<div class="flex flex-wrap">
+				<div id="calendar" class="w-1/3"></div>
+				<div id="event-details" class="w-2/3"></div>
+			</div>
 			<script>
+
 				window.eventsData = [];
 				{% for event in all_events %}
 					window.eventsData.push({
