--- a/wp-content/themes/wp-starter/template-parts/page-events.twig
+++ b/wp-content/themes/wp-starter/template-parts/page-events.twig
@@ -3,12 +3,12 @@
 
 {% block content %}
 
-	<div class="container px-6 category-archive md:px-12">
+	<div class="container px-6 category-archive lg:px-12">
 		{% include 'breadcrumbs.twig' with { 'page': page } %}
 		<div class="space-y-10 lg:space-y-12">
 			<h2 class="mt-10 h1 lG:mt-12">Events</h2>
 			{% if posts %}
-				<div class=" md:grid md:grid-cols-2 lg:grid-cols-3 md:gap-10">
+				<div class="space-y-6 lg:grid lg:grid-cols-2 lg:grid-cols-3 lg:gap-10 lg:space-y-0">
 					{% for post in posts %}
 						{% set category = post.terms('category')|first %}
 						
@@ -22,33 +22,22 @@
 			<h2 class="h1">MEETING CALENDAR</h2>
 			<h3 class="!font-medium h2">Events & Calendar</h3>
 			<p class="text-base lg:w-8/12 text-white/80">The EEA welcomes participation from all legally operating organizations including for-profit companies, non-profit organizations, and industry associations</p>
-			{# {% if all_events %}
-				<div class=" md:grid md:grid-cols-2 lg:grid-cols-3 md:gap-10">
-					{% for post in all_events %}
-						{% set category = post.terms('category')|first %}
-						
-						{% include ['tease-' ~ category.slug ~ '.twig', 'tease.twig'] %}
-
-					{% endfor %}
-				</div>
-			{% else %}
-				<p>No posts found.</p>
-			{% endif %} #}
+		
 			<div class="flex flex-wrap">
-				<div id="calendar" class="w-1/3"></div>
-				<div id="event-details" class="w-2/3"></div>
+				<div id="calendar" class="relative z-20 w-full pb-6 lg:pb-0 lg:w-1/3 bg-main-bg lg:pr-14"></div>
+				<div id="event-details" class="relative z-10 min-w-full lg:min-w-0 lg:w-2/3 "></div>
 			</div>
 			<script>
-
-				window.eventsData = [];
-				{% for event in all_events %}
-					window.eventsData.push({
-						title: "{{ event.title }}",
-						date: "{{ event.meta('event_date') }}"
-					});
-				{% endfor %}
-
-				console.log(window.eventsData)
+			window.eventsData = [];
+			{% for event in all_events %}
+			window.eventsData.push({
+				title: "{{ event.title|e('js') }}",
+				date: "{{ event.meta('event_date')|e('js') }}",
+				event_date: "{{ event.meta('event_date')|date('F j, Y')|e('js') }}",
+				link: "{{ event.link|e('js') }}",
+				excerpt: "{{ event.excerpt.read_more(false)|striptags|e('js') }}"
+			});
+			{% endfor %}
 			</script>
 
 		</div>
