--- a/wp-content/themes/wp-starter/template-parts/tease-events.twig
+++ b/wp-content/themes/wp-starter/template-parts/tease-events.twig
@@ -3,7 +3,7 @@
 {% endif %}
 {% set event_date = post.meta('event_date') %}
 
-<article class="tease h-full  border border-white/30 p-6 tease-{{ post.post_type }}" id="tease-{{ post.ID }}">
+<article class="tease h-full bg-black/20  border border-white/30 p-6 tease-{{ post.post_type }}" id="tease-{{ post.ID }}">
 	{% block content %}
 		<div class="flex flex-col h-full">
 			<div class="flex flex-col space-y-5 grow">
