--- a/wp-content/themes/wp-starter/assets/css/blocks/navigation.css
+++ b/wp-content/themes/wp-starter/assets/css/blocks/navigation.css
@@ -1,5 +1,10 @@
 /* MAIN NAVIGATION HEADER */
 
+.main-menu a,
+.main-navigation a {
+  @apply no-underline;
+}
+
 .main-header::before {
   @apply content-[''] block absolute -z-10 w-full h-full top-0 backdrop-blur-lg;
   background: rgb(0, 0, 0);
@@ -57,19 +62,19 @@
 
 @media (min-width: 1024px) {
   .menu-item a {
-    @apply text-base py-3 px-5 rounded-md text-[14px];
+    @apply text-base py-3 px-5 rounded-md text-[14px] no-underline;
   }
 }
 
 .menu-item.current-menu-item > div > a,
 .sub-menu .menu-item.current-menu-item > a {
-  @apply opacity-50;
+  @apply opacity-50 no-underline;
 }
 
 @media (min-width: 1024px) {
   .menu-item.current-menu-item > div > a,
   .sub-menu .menu-item.current-menu-item > a {
-    @apply opacity-100 bg-[#171717] ;
+    @apply opacity-100 bg-[#171717] no-underline;
   }
 }
 
@@ -114,12 +119,12 @@
 }
 
 .sub-menu .menu-item a {
-  @apply text-lg pb-0 inline-block;
+  @apply text-lg pb-0 inline-block no-underline;
 }
 
 @media (min-width: 1024px) {
   .sub-menu .menu-item a {
-    @apply text-base text-[14px] p-0 bg-[#171717] px-5 py-2.5 w-full;
+    @apply text-base text-[14px] p-0 bg-[#171717] px-5 py-2.5 w-full no-underline;
   }
   .sub-menu .menu-item a:hover,
   .sub-menu .current-menu-item a {
@@ -134,7 +139,7 @@
 }
 
 .menu-item-has-children a {
-  @apply relative;
+  @apply relative no-underline;
 }
 
 @media (min-width: 1024px) {
@@ -168,11 +173,11 @@
 }
 
 .menu-btn-gray a {
-  @apply rounded-full inline-block bg-[#1B1A1F] border border-[#999999]  !py-2 px-5 whitespace-nowrap;
+  @apply rounded-full inline-block bg-[#1B1A1F] border border-[#999999]  !py-2 px-5 whitespace-nowrap no-underline;
 }
 
 .menu-btn-black a {
-  @apply rounded-full inline-block bg-black border   py-2 px-5 border-white whitespace-nowrap !py-2;
+  @apply rounded-full inline-block bg-black border   py-2 px-5 border-white whitespace-nowrap !py-2 no-underline;
 }
 @media (min-width: 1024px) {
   .menu-btn-gray a,
