--- a/wp-content/themes/wp-starter/template-parts/blocks/hero-home.twig
+++ b/wp-content/themes/wp-starter/template-parts/blocks/hero-home.twig
@@ -33,6 +33,9 @@
 			<div class="pt-12 body-1">
 				{{ text | raw }}
 			</div>
+			<div class="pt-8">
+				<a href="https://entethalliance.github.io/solutioncat/" target="_blank" class="btn-primary">View Solution Catalog</a>
+			</div>
 		</div>
 
 	</div>
